Ooops, forgot to ingore INSTALL and install-sh in previous commit...
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@692 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+freeglut/freeglut/INSTALL
 freeglut/freeglut/Makefile
 freeglut/freeglut/Makefile.in
 freeglut/freeglut/aclocal.m4
@@ -22,6 +23,7 @@ freeglut/freeglut/include/GL/Makefile
 freeglut/freeglut/include/GL/Makefile.in
 freeglut/freeglut/include/Makefile
 freeglut/freeglut/include/Makefile.in
+freeglut/freeglut/install-sh
 freeglut/freeglut/libtool
 freeglut/freeglut/ltmain.sh
 freeglut/freeglut/man-pages
