Ooops, forgot to ingore INSTALL and install-sh in previous commit...
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@692 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+freeglut/INSTALL
 freeglut/Makefile
 freeglut/Makefile.in
 freeglut/aclocal.m4
@@ -22,6 +23,7 @@ freeglut/include/GL/Makefile
 freeglut/include/GL/Makefile.in
 freeglut/include/Makefile
 freeglut/include/Makefile.in
+freeglut/install-sh
 freeglut/libtool
 freeglut/ltmain.sh
 freeglut/man-pages
