Added Windows "nmake" Makefiles and dependency files for the two "freeglut" projects in accordance with Feature Request #1454543
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@717 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,18 +22,22 @@ freeglut/doc/index.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/ogl_sm.png -text
 freeglut/doc/progress.html svn_keywords=Author+Date+Id+Revision
 freeglut/doc/structure.html svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.dep -text
 freeglut/freeglut.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.dsw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevelop svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.kdevprj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut.mak -text
 freeglut/freeglut.rc svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.spec svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.tgt svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.wpj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcw svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_static.dep -text
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_static.mak -text
 freeglut/freeglut_static.tgt svn_keywords=Author+Date+Id+Revision
 freeglut/include/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/.cvsignore svn_keywords=Author+Date+Id+Revision
