--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ freeglut/freeglut/progs/Makefile.in
 freeglut/freeglut/progs/demos/CallbackMaker/.deps
 freeglut/freeglut/progs/demos/CallbackMaker/.libs
 freeglut/freeglut/progs/demos/CallbackMaker/CallbackMaker
+freeglut/freeglut/progs/demos/CallbackMaker/CallbackMaker.exe
 freeglut/freeglut/progs/demos/CallbackMaker/Makefile
 freeglut/freeglut/progs/demos/CallbackMaker/Makefile.in
 freeglut/freeglut/progs/demos/Fractals/.deps
@@ -40,16 +41,19 @@ freeglut/freeglut/progs/demos/Fractals/.libs
 freeglut/freeglut/progs/demos/Fractals/Makefile
 freeglut/freeglut/progs/demos/Fractals/Makefile.in
 freeglut/freeglut/progs/demos/Fractals/fractals
+freeglut/freeglut/progs/demos/Fractals/fractals.exe
 freeglut/freeglut/progs/demos/Fractals_random/.deps
 freeglut/freeglut/progs/demos/Fractals_random/.libs
 freeglut/freeglut/progs/demos/Fractals_random/Makefile
 freeglut/freeglut/progs/demos/Fractals_random/Makefile.in
 freeglut/freeglut/progs/demos/Fractals_random/fractals_random
+freeglut/freeglut/progs/demos/Fractals_random/fractals_random.exe
 freeglut/freeglut/progs/demos/Lorenz/.deps
 freeglut/freeglut/progs/demos/Lorenz/.libs
 freeglut/freeglut/progs/demos/Lorenz/Makefile
 freeglut/freeglut/progs/demos/Lorenz/Makefile.in
 freeglut/freeglut/progs/demos/Lorenz/lorenz
+freeglut/freeglut/progs/demos/Lorenz/lorenz.exe
 freeglut/freeglut/progs/demos/Makefile
 freeglut/freeglut/progs/demos/Makefile.in
 freeglut/freeglut/progs/demos/One/.deps
@@ -57,11 +61,13 @@ freeglut/freeglut/progs/demos/One/.libs
 freeglut/freeglut/progs/demos/One/Makefile
 freeglut/freeglut/progs/demos/One/Makefile.in
 freeglut/freeglut/progs/demos/One/one
+freeglut/freeglut/progs/demos/One/one.exe
 freeglut/freeglut/progs/demos/shapes/.deps
 freeglut/freeglut/progs/demos/shapes/.libs
 freeglut/freeglut/progs/demos/shapes/Makefile
 freeglut/freeglut/progs/demos/shapes/Makefile.in
 freeglut/freeglut/progs/demos/shapes/shapes
+freeglut/freeglut/progs/demos/shapes/shapes.exe
 freeglut/freeglut/src/*.la
 freeglut/freeglut/src/*.lo
 freeglut/freeglut/src/.deps
