Ignore config.lt, too. It seems to be generated by recent autotools.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@767 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ freeglut/config.guess
 freeglut/config.h
 freeglut/config.h.in
 freeglut/config.log
+freeglut/config.lt
 freeglut/config.status
 freeglut/config.sub
 freeglut/configure
