Initial version of a fully OpenGL-3.0-compliant of the famous smooth.c from the Red Book. What has been done already:
   * Explicitly request a forward-compatible 3.0 context

   * Report GL errors, if any, at a few crucial places

   * Replaced gluOrtho2D with a home-grown matrix + glLoadMatrixf

What remains to be done:

   * Use vertex shaders and fragment shaders

   * Use vertex buffer objects


git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@774 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -84,6 +84,10 @@ freeglut/freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Rev
 freeglut/freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/progs/demos/shapes/shapesStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/progs/demos/smooth_opengl3/Makefile.am -text
+freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
+freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3.dsp -text
+freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static.dsp -text
 freeglut/freeglut/src/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
