Initial version of a fully OpenGL-3.0-compliant of the famous smooth.c from the Red Book. What has been done already:
   * Explicitly request a forward-compatible 3.0 context

   * Report GL errors, if any, at a few crucial places

   * Replaced gluOrtho2D with a home-grown matrix + glLoadMatrixf

What remains to be done:

   * Use vertex shaders and fragment shaders

   * Use vertex buffer objects


git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@774 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,11 @@ freeglut/progs/demos/shapes/Makefile
 freeglut/progs/demos/shapes/Makefile.in
 freeglut/progs/demos/shapes/shapes
 freeglut/progs/demos/shapes/shapes.exe
+freeglut/progs/demos/smooth_opengl3/.deps
+freeglut/progs/demos/smooth_opengl3/Makefile
+freeglut/progs/demos/smooth_opengl3/Makefile.in
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3.exe
 freeglut/src/*.la
 freeglut/src/*.lo
 freeglut/src/.deps
