--- a/.gitattributes
+++ b/.gitattributes
@@ -84,6 +84,10 @@ freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapesStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/smooth_opengl3/Makefile.am -text
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3.dsp -text
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static.dsp -text
 freeglut/src/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
