--- a/.gitattributes
+++ b/.gitattributes
@@ -39,6 +39,9 @@ freeglut/freeglut_static.dep -text
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.mak -text
 freeglut/freeglut_static.tgt svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut_static_vs2008.vcproj -text
+freeglut/freeglut_vs2008.sln -text
+freeglut/freeglut_vs2008.vcproj -text
 freeglut/include/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
@@ -54,16 +57,22 @@ freeglut/progs/demos/CallbackMaker/.cvsignore svn_keywords=Author+Date+Id+Revisi
 freeglut/progs/demos/CallbackMaker/CallbackMaker.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMaker.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/CallbackMaker/CallbackMakerStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/CallbackMaker/CallbackMakerStatic_vs2008.vcproj -text
+freeglut/progs/demos/CallbackMaker/CallbackMaker_vs2008.vcproj -text
 freeglut/progs/demos/CallbackMaker/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/Fractals.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/FractalsStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals/FractalsStatic_vs2008.vcproj -text
+freeglut/progs/demos/Fractals/Fractals_vs2008.vcproj -text
 freeglut/progs/demos/Fractals/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Fractals_random.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/Fractals_randomStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Fractals_random/Fractals_randomStatic_vs2008.vcproj -text
+freeglut/progs/demos/Fractals_random/Fractals_random_vs2008.vcproj -text
 freeglut/progs/demos/Fractals_random/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals.dat svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Fractals_random/fractals_random.c svn_keywords=Author+Date+Id+Revision
@@ -72,22 +81,31 @@ freeglut/progs/demos/Lorenz/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenz.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/Lorenz/lorenzStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/Lorenz/lorenzStatic_vs2008.vcproj -text
+freeglut/progs/demos/Lorenz/lorenz_vs2008.vcproj -text
 freeglut/progs/demos/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/one.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/One/oneStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/One/oneStatic_vs2008.vcproj -text
+freeglut/progs/demos/One/one_vs2008.vcproj -text
 freeglut/progs/demos/demos.dsw svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/demos_vs2008.sln -text
 freeglut/progs/demos/shapes/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.c svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapes.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/progs/demos/shapes/shapesStatic.dsp svn_keywords=Author+Date+Id+Revision
+freeglut/progs/demos/shapes/shapesStatic_vs2008.vcproj -text
+freeglut/progs/demos/shapes/shapes_vs2008.vcproj -text
 freeglut/progs/demos/smooth_opengl3/Makefile.am -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.dsp -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static.dsp -text
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static_vs2008.vcproj -text
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3_vs2008.vcproj -text
 freeglut/src/.cvsignore svn_keywords=Author+Date+Id+Revision
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
