--- a/.gitignore
+++ b/.gitignore
@@ -41,16 +41,22 @@ freeglut/progs/demos/CallbackMaker/.deps
 freeglut/progs/demos/CallbackMaker/.libs
 freeglut/progs/demos/CallbackMaker/CallbackMaker
 freeglut/progs/demos/CallbackMaker/CallbackMaker.exe
+freeglut/progs/demos/CallbackMaker/CallbackMakerStatic_vs2008.vcproj.*.user
+freeglut/progs/demos/CallbackMaker/CallbackMaker_vs2008.vcproj.*.user
 freeglut/progs/demos/CallbackMaker/Makefile
 freeglut/progs/demos/CallbackMaker/Makefile.in
 freeglut/progs/demos/Fractals/.deps
 freeglut/progs/demos/Fractals/.libs
+freeglut/progs/demos/Fractals/FractalsStatic_vs2008.*.user
+freeglut/progs/demos/Fractals/Fractals_vs2008.vcproj.*.user
 freeglut/progs/demos/Fractals/Makefile
 freeglut/progs/demos/Fractals/Makefile.in
 freeglut/progs/demos/Fractals/fractals
 freeglut/progs/demos/Fractals/fractals.exe
 freeglut/progs/demos/Fractals_random/.deps
 freeglut/progs/demos/Fractals_random/.libs
+freeglut/progs/demos/Fractals_random/Fractals_randomStatic_vs2008.vcproj.*.user
+freeglut/progs/demos/Fractals_random/Fractals_random_vs2008.vcproj.*.user
 freeglut/progs/demos/Fractals_random/Makefile
 freeglut/progs/demos/Fractals_random/Makefile.in
 freeglut/progs/demos/Fractals_random/fractals_random
@@ -61,6 +67,8 @@ freeglut/progs/demos/Lorenz/Makefile
 freeglut/progs/demos/Lorenz/Makefile.in
 freeglut/progs/demos/Lorenz/lorenz
 freeglut/progs/demos/Lorenz/lorenz.exe
+freeglut/progs/demos/Lorenz/lorenzStatic_vs2008.vcproj.*.user
+freeglut/progs/demos/Lorenz/lorenz_vs2008.vcproj.*.user
 freeglut/progs/demos/Makefile
 freeglut/progs/demos/Makefile.in
 freeglut/progs/demos/One/.deps
@@ -69,17 +77,25 @@ freeglut/progs/demos/One/Makefile
 freeglut/progs/demos/One/Makefile.in
 freeglut/progs/demos/One/one
 freeglut/progs/demos/One/one.exe
+freeglut/progs/demos/One/oneStatic_vs2008.vcproj.*.user
+freeglut/progs/demos/One/one_vs2008.vcproj.*.user
+freeglut/progs/demos/demos_vs2008.ncb
+freeglut/progs/demos/demos_vs2008.suo
 freeglut/progs/demos/shapes/.deps
 freeglut/progs/demos/shapes/.libs
 freeglut/progs/demos/shapes/Makefile
 freeglut/progs/demos/shapes/Makefile.in
 freeglut/progs/demos/shapes/shapes
 freeglut/progs/demos/shapes/shapes.exe
+freeglut/progs/demos/shapes/shapesStatic_vs2008.vcproj.*.user
+freeglut/progs/demos/shapes/shapes_vs2008.vcproj.*.user
 freeglut/progs/demos/smooth_opengl3/.deps
 freeglut/progs/demos/smooth_opengl3/Makefile
 freeglut/progs/demos/smooth_opengl3/Makefile.in
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.exe
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static_vs2008.*.user
+freeglut/progs/demos/smooth_opengl3/smooth_opengl3_vs2008.vcproj.*.user
 freeglut/src/*.la
 freeglut/src/*.lo
 freeglut/src/.deps
