Put static library stuff into its own solution. This way, a rather uncommon way doesn't clutter up our normal solution, which is DLL-based.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@823 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -40,6 +40,7 @@ freeglut/freeglut_static.tgt svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static_vs2008.vcproj -text
 freeglut/freeglut_vs2008.sln -text
 freeglut/freeglut_vs2008.vcproj -text
+freeglut/freeglut_vs2008_static.sln -text
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
