--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+freeglut/*.ncb
+freeglut/*.suo
 freeglut/Debug
+freeglut/DebugStatic
 freeglut/INSTALL
 freeglut/Makefile
 freeglut/Makefile.in
 freeglut/Release
+freeglut/ReleaseStatic
 freeglut/aclocal.m4
 freeglut/autom4te.cache
 freeglut/autoscan.log
@@ -23,8 +27,6 @@ freeglut/doc/Makefile
 freeglut/doc/Makefile.in
 freeglut/freeglut-*.tar.gz
 freeglut/freeglut_static_vs2008.vcproj.*.user
-freeglut/freeglut_vs2008.ncb
-freeglut/freeglut_vs2008.suo
 freeglut/freeglut_vs2008.vcproj.*.user
 freeglut/include/GL/Makefile
 freeglut/include/GL/Makefile.in
