Move all files related to Visual Studio 2008 into 2 directories, one for the normal DLL build, and one for the static build. We should do this for other IDEs, too.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@824 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,58 @@
-freeglut/*.ncb
-freeglut/*.suo
-freeglut/Debug
-freeglut/DebugStatic
 freeglut/INSTALL
 freeglut/Makefile
 freeglut/Makefile.in
-freeglut/Release
-freeglut/ReleaseStatic
+freeglut/VisualStudio2008/*.user
+freeglut/VisualStudio2008/CallbackMaker/*.user
+freeglut/VisualStudio2008/CallbackMaker/Debug
+freeglut/VisualStudio2008/CallbackMaker/Release
+freeglut/VisualStudio2008/Debug
+freeglut/VisualStudio2008/Fractals/*.user
+freeglut/VisualStudio2008/Fractals/Debug
+freeglut/VisualStudio2008/Fractals/Release
+freeglut/VisualStudio2008/Fractals_random/*.user
+freeglut/VisualStudio2008/Fractals_random/Debug
+freeglut/VisualStudio2008/Fractals_random/Release
+freeglut/VisualStudio2008/Lorenz/*.user
+freeglut/VisualStudio2008/Lorenz/Debug
+freeglut/VisualStudio2008/Lorenz/Release
+freeglut/VisualStudio2008/One/*.user
+freeglut/VisualStudio2008/One/Debug
+freeglut/VisualStudio2008/One/Release
+freeglut/VisualStudio2008/Release
+freeglut/VisualStudio2008/freeglut.ncb
+freeglut/VisualStudio2008/freeglut.suo
+freeglut/VisualStudio2008/shapes/*.user
+freeglut/VisualStudio2008/shapes/Debug
+freeglut/VisualStudio2008/shapes/Release
+freeglut/VisualStudio2008/smooth_opengl3/*.user
+freeglut/VisualStudio2008/smooth_opengl3/Debug
+freeglut/VisualStudio2008/smooth_opengl3/Release
+freeglut/VisualStudio2008Static/*.user
+freeglut/VisualStudio2008Static/CallbackMaker/*.user
+freeglut/VisualStudio2008Static/CallbackMaker/Debug
+freeglut/VisualStudio2008Static/CallbackMaker/Release
+freeglut/VisualStudio2008Static/Debug
+freeglut/VisualStudio2008Static/Fractals/*.user
+freeglut/VisualStudio2008Static/Fractals/Debug
+freeglut/VisualStudio2008Static/Fractals/Release
+freeglut/VisualStudio2008Static/Fractals_random/*.user
+freeglut/VisualStudio2008Static/Fractals_random/Debug
+freeglut/VisualStudio2008Static/Fractals_random/Release
+freeglut/VisualStudio2008Static/Lorenz/*.user
+freeglut/VisualStudio2008Static/Lorenz/Debug
+freeglut/VisualStudio2008Static/Lorenz/Release
+freeglut/VisualStudio2008Static/One/*.user
+freeglut/VisualStudio2008Static/One/Debug
+freeglut/VisualStudio2008Static/One/Release
+freeglut/VisualStudio2008Static/Release
+freeglut/VisualStudio2008Static/freeglut.ncb
+freeglut/VisualStudio2008Static/freeglut.suo
+freeglut/VisualStudio2008Static/shapes/*.user
+freeglut/VisualStudio2008Static/shapes/Debug
+freeglut/VisualStudio2008Static/shapes/Release
+freeglut/VisualStudio2008Static/smooth_opengl3/*.user
+freeglut/VisualStudio2008Static/smooth_opengl3/Debug
+freeglut/VisualStudio2008Static/smooth_opengl3/Release
 freeglut/aclocal.m4
 freeglut/autom4te.cache
 freeglut/autoscan.log
@@ -26,8 +72,6 @@ freeglut/depcomp
 freeglut/doc/Makefile
 freeglut/doc/Makefile.in
 freeglut/freeglut-*.tar.gz
-freeglut/freeglut_static_vs2008.vcproj.*.user
-freeglut/freeglut_vs2008.vcproj.*.user
 freeglut/include/GL/Makefile
 freeglut/include/GL/Makefile.in
 freeglut/include/Makefile
@@ -43,22 +87,16 @@ freeglut/progs/demos/CallbackMaker/.deps
 freeglut/progs/demos/CallbackMaker/.libs
 freeglut/progs/demos/CallbackMaker/CallbackMaker
 freeglut/progs/demos/CallbackMaker/CallbackMaker.exe
-freeglut/progs/demos/CallbackMaker/CallbackMakerStatic_vs2008.vcproj.*.user
-freeglut/progs/demos/CallbackMaker/CallbackMaker_vs2008.vcproj.*.user
 freeglut/progs/demos/CallbackMaker/Makefile
 freeglut/progs/demos/CallbackMaker/Makefile.in
 freeglut/progs/demos/Fractals/.deps
 freeglut/progs/demos/Fractals/.libs
-freeglut/progs/demos/Fractals/FractalsStatic_vs2008.*.user
-freeglut/progs/demos/Fractals/Fractals_vs2008.vcproj.*.user
 freeglut/progs/demos/Fractals/Makefile
 freeglut/progs/demos/Fractals/Makefile.in
 freeglut/progs/demos/Fractals/fractals
 freeglut/progs/demos/Fractals/fractals.exe
 freeglut/progs/demos/Fractals_random/.deps
 freeglut/progs/demos/Fractals_random/.libs
-freeglut/progs/demos/Fractals_random/Fractals_randomStatic_vs2008.vcproj.*.user
-freeglut/progs/demos/Fractals_random/Fractals_random_vs2008.vcproj.*.user
 freeglut/progs/demos/Fractals_random/Makefile
 freeglut/progs/demos/Fractals_random/Makefile.in
 freeglut/progs/demos/Fractals_random/fractals_random
@@ -69,8 +107,6 @@ freeglut/progs/demos/Lorenz/Makefile
 freeglut/progs/demos/Lorenz/Makefile.in
 freeglut/progs/demos/Lorenz/lorenz
 freeglut/progs/demos/Lorenz/lorenz.exe
-freeglut/progs/demos/Lorenz/lorenzStatic_vs2008.vcproj.*.user
-freeglut/progs/demos/Lorenz/lorenz_vs2008.vcproj.*.user
 freeglut/progs/demos/Makefile
 freeglut/progs/demos/Makefile.in
 freeglut/progs/demos/One/.deps
@@ -79,25 +115,17 @@ freeglut/progs/demos/One/Makefile
 freeglut/progs/demos/One/Makefile.in
 freeglut/progs/demos/One/one
 freeglut/progs/demos/One/one.exe
-freeglut/progs/demos/One/oneStatic_vs2008.vcproj.*.user
-freeglut/progs/demos/One/one_vs2008.vcproj.*.user
-freeglut/progs/demos/demos_vs2008.ncb
-freeglut/progs/demos/demos_vs2008.suo
 freeglut/progs/demos/shapes/.deps
 freeglut/progs/demos/shapes/.libs
 freeglut/progs/demos/shapes/Makefile
 freeglut/progs/demos/shapes/Makefile.in
 freeglut/progs/demos/shapes/shapes
 freeglut/progs/demos/shapes/shapes.exe
-freeglut/progs/demos/shapes/shapesStatic_vs2008.vcproj.*.user
-freeglut/progs/demos/shapes/shapes_vs2008.vcproj.*.user
 freeglut/progs/demos/smooth_opengl3/.deps
 freeglut/progs/demos/smooth_opengl3/Makefile
 freeglut/progs/demos/smooth_opengl3/Makefile.in
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.exe
-freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static_vs2008.*.user
-freeglut/progs/demos/smooth_opengl3/smooth_opengl3_vs2008.vcproj.*.user
 freeglut/src/*.la
 freeglut/src/*.lo
 freeglut/src/.deps
