--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@ freeglut/ChangeLog svn_keywords=Author+Date+Id+Revision
 freeglut/FrequentlyAskedQuestions -text
 freeglut/LISEZ_MOI svn_keywords=Author+Date+Id+Revision
 freeglut/Makefile.am svn_keywords=Author+Date+Id+Revision
+freeglut/Makefile.wat -text
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
@@ -47,14 +48,11 @@ freeglut/freeglut.lsm svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.mak -text
 freeglut/freeglut.rc svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut.spec svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut.tgt svn_keywords=Author+Date+Id+Revision
-freeglut/freeglut.wpj svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_evc4.vcw svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.dep -text
 freeglut/freeglut_static.dsp svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut_static.mak -text
-freeglut/freeglut_static.tgt svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut.h svn_keywords=Author+Date+Id+Revision
 freeglut/include/GL/freeglut_ext.h svn_keywords=Author+Date+Id+Revision
