--- a/.gitattributes
+++ b/.gitattributes
@@ -94,6 +94,12 @@ freeglut/progs/demos/smooth_opengl3/Makefile.am -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.c -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3.dsp -text
 freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static.dsp -text
+freeglut/progs/demos/spaceball/Makefile.am -text
+freeglut/progs/demos/spaceball/spaceball.c -text
+freeglut/progs/demos/spaceball/spaceball.dsp -text
+freeglut/progs/demos/spaceball/vmath.c -text
+freeglut/progs/demos/spaceball/vmath.h -text
+freeglut/progs/demos/spaceball/vmath.inl -text
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
@@ -112,6 +118,7 @@ freeglut/src/freeglut_main.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_menu.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_misc.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_overlay.c svn_keywords=Author+Date+Id+Revision
+freeglut/src/freeglut_spaceball.c -text
 freeglut/src/freeglut_state.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_stroke_mono_roman.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_stroke_roman.c svn_keywords=Author+Date+Id+Revision
