Getting the "spaceball" demo to build properly in Windows
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@844 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -97,6 +97,7 @@ freeglut/freeglut/progs/demos/smooth_opengl3/smooth_opengl3Static.dsp -text
 freeglut/freeglut/progs/demos/spaceball/Makefile.am -text
 freeglut/freeglut/progs/demos/spaceball/spaceball.c -text
 freeglut/freeglut/progs/demos/spaceball/spaceball.dsp -text
+freeglut/freeglut/progs/demos/spaceball/spaceball_static.dsp -text
 freeglut/freeglut/progs/demos/spaceball/vmath.c -text
 freeglut/freeglut/progs/demos/spaceball/vmath.h -text
 freeglut/freeglut/progs/demos/spaceball/vmath.inl -text
