Adding a 'README.mac' file to capture Nicholas Panayis' experience -- see e-mail on freeglut-developer dated 11/9/2010 at 10:03 PM
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@879 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ freeglut/Makefile.wat -text
 freeglut/NEWS svn_keywords=Author+Date+Id+Revision
 freeglut/README svn_keywords=Author+Date+Id+Revision
 freeglut/README.cygwin_mingw -text
+freeglut/README.mac -text
 freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
 freeglut/VisualStudio2008/CallbackMaker/CallbackMaker.vcproj -text
