Adding Visual Studio 2010 support and moving Visual Studio 2008 support from two separate directories into a single "VisualStudio" directory.
Use of the project files in the "VisualStudio2008" or "VisualStudio2008Static" directories is now DEPRECATED.

git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@880 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,32 @@ freeglut/README.cygwin_mingw -text
 freeglut/README.mac -text
 freeglut/README.win32 svn_keywords=Author+Date+Id+Revision
 freeglut/TODO svn_keywords=Author+Date+Id+Revision
+freeglut/VisualStudio/2008/CallbackMaker/CallbackMaker.vcproj -text
+freeglut/VisualStudio/2008/Fractals/Fractals.vcproj -text
+freeglut/VisualStudio/2008/Fractals_random/Fractals_random.vcproj -text
+freeglut/VisualStudio/2008/Lorenz/Lorenz.vcproj -text
+freeglut/VisualStudio/2008/One/One.vcproj -text
+freeglut/VisualStudio/2008/freeglut.sln -text
+freeglut/VisualStudio/2008/freeglut.vcproj -text
+freeglut/VisualStudio/2008/shapes/shapes.vcproj -text
+freeglut/VisualStudio/2008/smooth_opengl3/smooth_opengl3.vcproj -text
+freeglut/VisualStudio/2010/CallbackMaker/CallbackMaker.vcxproj -text
+freeglut/VisualStudio/2010/CallbackMaker/CallbackMaker.vcxproj.filters -text
+freeglut/VisualStudio/2010/Fractals/Fractals.vcxproj -text
+freeglut/VisualStudio/2010/Fractals/Fractals.vcxproj.filters -text
+freeglut/VisualStudio/2010/Fractals_random/Fractals_random.vcxproj -text
+freeglut/VisualStudio/2010/Fractals_random/Fractals_random.vcxproj.filters -text
+freeglut/VisualStudio/2010/Lorenz/Lorenz.vcxproj -text
+freeglut/VisualStudio/2010/Lorenz/Lorenz.vcxproj.filters -text
+freeglut/VisualStudio/2010/One/One.vcxproj -text
+freeglut/VisualStudio/2010/One/One.vcxproj.filters -text
+freeglut/VisualStudio/2010/freeglut.sln -text
+freeglut/VisualStudio/2010/freeglut.vcxproj -text
+freeglut/VisualStudio/2010/freeglut.vcxproj.filters -text
+freeglut/VisualStudio/2010/shapes/shapes.vcxproj -text
+freeglut/VisualStudio/2010/shapes/shapes.vcxproj.filters -text
+freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj -text
+freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj.filters -text
 freeglut/VisualStudio2008/CallbackMaker/CallbackMaker.vcproj -text
 freeglut/VisualStudio2008/Fractals/Fractals.vcproj -text
 freeglut/VisualStudio2008/Fractals_random/Fractals_random.vcproj -text
