Adding the 'subwinfix.patch' patch to set the focus in the Windows code.  Includes a demo program.  See e-mail from Evan Felix dated 3/17/11 4:22 PM
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@906 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,9 @@ freeglut/progs/demos/spaceball/spaceball_static.dsp -text
 freeglut/progs/demos/spaceball/vmath.c -text
 freeglut/progs/demos/spaceball/vmath.h -text
 freeglut/progs/demos/spaceball/vmath.inl -text
+freeglut/progs/demos/subwin/Makefile.am -text
+freeglut/progs/demos/subwin/subwin.c -text
+freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
