--- a/.gitattributes
+++ b/.gitattributes
@@ -128,6 +128,9 @@ freeglut/freeglut/progs/demos/spaceball/spaceball_static.dsp -text
 freeglut/freeglut/progs/demos/spaceball/vmath.c -text
 freeglut/freeglut/progs/demos/spaceball/vmath.h -text
 freeglut/freeglut/progs/demos/spaceball/vmath.inl -text
+freeglut/freeglut/progs/demos/subwin/Makefile.am -text
+freeglut/freeglut/progs/demos/subwin/subwin.c -text
+freeglut/freeglut/progs/demos/subwin/subwin.dsp -text
 freeglut/freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
