Adding 'freeglut_xinput.c' to fix the SVN head per e-mail from Floiran Echtler around March 19, 2011
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk@907 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -158,6 +158,7 @@ freeglut/freeglut/src/freeglut_teapot.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_teapot_data.h svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_videoresize.c svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/freeglut_window.c svn_keywords=Author+Date+Id+Revision
+freeglut/freeglut/src/freeglut_xinput.c -text
 freeglut/freeglut/src/freeglutdll.def svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/cpp_template svn_keywords=Author+Date+Id+Revision
 freeglut/freeglut/src/templates/header_template svn_keywords=Author+Date+Id+Revision
