Adding the "subwin" demo program to the Visual Studio 2008 build tree per e-mail from Diederick Niehorster dated 3/22/11 at 8:58 AM
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@911 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -22,6 +22,7 @@ freeglut/VisualStudio/2008/freeglut.sln -text
 freeglut/VisualStudio/2008/freeglut.vcproj -text
 freeglut/VisualStudio/2008/shapes/shapes.vcproj -text
 freeglut/VisualStudio/2008/smooth_opengl3/smooth_opengl3.vcproj -text
+freeglut/VisualStudio/2008/subwin/subwin.vcproj -text
 freeglut/VisualStudio/2010/CallbackMaker/CallbackMaker.vcxproj -text
 freeglut/VisualStudio/2010/CallbackMaker/CallbackMaker.vcxproj.filters -text
 freeglut/VisualStudio/2010/Fractals/Fractals.vcxproj -text
