Adding the "subwin" demo program to the Visual Studio 2010 build tree per e-mail from Diederick Niehorster dated 3/22/11 at 8:58 AM.  I had to hand-jam it with Notepad so please check it for errors.
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@912 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -40,6 +40,8 @@ freeglut/VisualStudio/2010/shapes/shapes.vcxproj -text
 freeglut/VisualStudio/2010/shapes/shapes.vcxproj.filters -text
 freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj -text
 freeglut/VisualStudio/2010/smooth_opengl3/smooth_opengl3.vcxproj.filters -text
+freeglut/VisualStudio/2010/subwin/subwin.vcxproj -text
+freeglut/VisualStudio/2010/subwin/subwin.vcxproj.filters -text
 freeglut/VisualStudio2008/CallbackMaker/CallbackMaker.vcproj -text
 freeglut/VisualStudio2008/Fractals/Fractals.vcproj -text
 freeglut/VisualStudio2008/Fractals_random/Fractals_random.vcproj -text
