Adding the "subwin" demo to the MSVC 6.0 workspace, in both static and dynamic configurations
git-svn-id: https://svn.code.sf.net/p/freeglut/code/trunk/freeglut@915 7f0cb862-5218-0410-a997-914c9d46530a

--- a/.gitattributes
+++ b/.gitattributes
@@ -134,6 +134,7 @@ freeglut/progs/demos/spaceball/vmath.inl -text
 freeglut/progs/demos/subwin/Makefile.am -text
 freeglut/progs/demos/subwin/subwin.c -text
 freeglut/progs/demos/subwin/subwin.dsp -text
+freeglut/progs/demos/subwin/subwinStatic.dsp -text
 freeglut/src/Makefile.am svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_callbacks.c svn_keywords=Author+Date+Id+Revision
 freeglut/src/freeglut_cursor.c svn_keywords=Author+Date+Id+Revision
